--- a/styles.css
+++ b/styles.css
@@ -2,18 +2,77 @@
 margin: 0px;
 padding: 0px;
 } */
+html {
+  scroll-behavior: smooth;
+}
 
-.logo{
-display:block;
-margin: auto;   
-    height: 420px;
+/* header elements */
+nav ul {
+  display: flex;
+  justify-content: space-around;
+  list-style: none;
+  gap: 20px;
+  background-color: rgb(187, 247, 197);
+  padding: 10px;
+  margin: 20px;
+  border-radius: 10px;
+  flex-wrap: wrap;
 }
-nav ul{
-    list-style: none;
-    text-align: center;
+nav li {
+  transition: all 0.5s ease-in-out;
+  padding: 5px;
+  border-radius: 8px;
 }
-nav li{
-    display: inline-block;
-    margin: auto;
-    padding: 20px;
+nav li:hover {
+  transform: scale(1.05);
+  background-color: rgb(25, 83, 64);
+  
+}
+
+
+
+/* main elements */
+a {
+  transition: all 0.3s ease-in-out;
+  color: black;
+  font-size: larger;
+  text-decoration: none;
+  padding: 5px;
+}
+a:hover {
+  color: azure;
+}
+
+.home {
+  display: flex;
+  margin: 10px;
+  flex-wrap: wrap;
+}
+.products {
+  display: flex;
+  justify-content: space-around;
+  gap: 10px;
+  margin: 10px;
+}
+#main-heading1 {
+  text-align: center;
+}
+
+.img-logo {
+  display: block;
+  margin: auto;
+  max-width: 100%;
+  max-height: 420px;
+}
+
+
+/* footer elements */
+footer {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.img-thumbs {
+  height: 50px;
+  width: auto;
 }
