made a semantically good website along with a pleasant scheme and images

--- a/styles.css
+++ b/styles.css
@@ -4,18 +4,47 @@ padding: 0px;
 } */
 html {
   scroll-behavior: smooth;
+  background-image: linear-gradient(
+    150deg,
+    #2e8b8b,
+    rgb(32, 189, 176),
+    rgb(131, 130, 130)
+  );
+}
+body {
+  min-height: 100%;
 }
 
-/* header elements */
+/* head elements */
+
+.img-logo {
+  display: block;
+  margin: auto;
+  max-width: 100%;
+  max-height: 420px;
+  padding: 50px;
+  background-color: rgb(158, 238, 238);
+  border-radius: 50px;
+  transition: all 0.5s ease-in-out;
+}
+.img-logo:hover {
+  transform: scale(1.05);
+}
+
+
+
+/* nav elements */
 nav ul {
   display: flex;
   justify-content: space-around;
   list-style: none;
   gap: 20px;
-  background-color: rgb(187, 247, 197);
+  background-color: #2e8b8b;
   padding: 10px;
-  margin: 20px;
-  border-radius: 10px;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: 40px;
+  border-radius: 20px;
   flex-wrap: wrap;
 }
 nav li {
@@ -25,16 +54,11 @@ nav li {
 }
 nav li:hover {
   transform: scale(1.05);
-  background-color: rgb(25, 83, 64);
-  
+  background-color: rgb(38, 71, 61);
 }
-
-
-
-/* main elements */
 a {
   transition: all 0.3s ease-in-out;
-  color: black;
+  color: rgb(230, 226, 226);
   font-size: larger;
   text-decoration: none;
   padding: 5px;
@@ -43,26 +67,113 @@ a:hover {
   color: azure;
 }
 
-.home {
-  display: flex;
-  margin: 10px;
-  flex-wrap: wrap;
-}
-.products {
-  display: flex;
-  justify-content: space-around;
-  gap: 10px;
-  margin: 10px;
-}
+
+
+
+/* main elements */
 #main-heading1 {
-  text-align: center;
+  /* text-align: center; */
+  font-size: xx-large;
+  color: aliceblue;
+  background-color: #113636;
+    display: inline-block;
+    margin: auto;
+    padding: 10px 30px;
+    border-radius:15px ;
 }
 
-.img-logo {
-  display: block;
-  margin: auto;
+
+/* column unified for promotion banner */
+.home {
+  display: flex;  
+  margin: 15px;
+  padding: 10px;
+  flex-wrap: wrap;
+  text-align: center;
+}  
+.promotion {
+  position: relative;
+  margin: 20px;
+}
+.promotion-p {
+  position: absolute;
+  padding: 5px 10px 10px 50px;
+  color: azure;
+  font-size: xx-large;
+}
+
+.promotion-img {
   max-width: 100%;
-  max-height: 420px;
+  padding: 10px;
+  border-radius: 20px;
+  background-color: rgb(158, 238, 238);
+  transition: all 0.4s ease-in-out;
+}
+
+
+/* seperate 3 columns for content and images */
+.products {
+  display: flex;  
+  justify-content: space-around;
+  gap: 20px;
+  margin: 20px;
+}  
+
+article[class="products-1"]{
+  padding: 10px;
+  background-color: rgb(8, 87, 87);
+  border-radius: 15px;
+  text-align: center;
+  color: white;
+  transition: all 0.4s ease-in-out;
+}
+article[class="products-1"]:hover {
+  background-color: rgb(158, 238, 238);
+  color: black;
+}
+.products-1 img{
+    max-width: 100%;
+}
+
+.products-3 img{
+    max-width: 100%;
+}
+
+article[class="products-2"] {
+  padding: 10px;
+  background-color: rgb(8, 87, 87);
+  border-radius: 15px;
+  text-align: center;
+    color: white;
+
+  transition: all 0.4s ease-in-out;
+
+}
+article[class="products-2"]:hover {
+  background-color: rgb(158, 238, 238);
+    color: black;
+
+}
+.products-2 img{
+    max-width: 100%;
+}
+
+article[class="products-3"] {
+  border-radius: 15px;
+  padding: 10px;
+  background-color: rgb(8, 87, 87);
+  text-align: center;
+    color: white;
+  transition: all 0.4s ease-in-out;
+
+}
+article[class="products-3"]:hover {
+  background-color: rgb(158, 238, 238);
+    color: black;
+
+}
+.products-3 img{
+    max-width: 100%;
 }
 
 
@@ -72,7 +183,19 @@ footer {
   justify-content: space-between;
   flex-wrap: wrap;
 }
+/* footer logo */
 .img-thumbs {
   height: 50px;
   width: auto;
+   background-color: rgb(158, 238, 238);
+  border-radius: 5px;
+    padding: 5px;
+}
+
+.copyright{
+    font-size: x-large;
+    color: rgb(143, 194, 196);
+    background-color: #113636;
+padding: 5px;
+border-radius: 10px;
 }
